change url in src and srcset

--- a/components/basket.html
+++ b/components/basket.html
@@ -251,7 +251,7 @@
                             <li class="basket-item">
                                 <div class="basket-item_img">
                                     <img
-                                        src="/pictures/jpg/Screenshot_1.png"
+                                        src="../pictures/jpg/Screenshot_1.png"
                                         alt=""
                                     />
                                 </div>
@@ -300,7 +300,7 @@
                             <li class="basket-item">
                                 <div class="basket-item_img">
                                     <img
-                                        src="/pictures/jpg/Screenshot_1.png"
+                                        src="../pictures/jpg/Screenshot_1.png"
                                         alt=""
                                     />
                                 </div>
@@ -349,7 +349,7 @@
                             <li class="basket-item">
                                 <div class="basket-item_img">
                                     <img
-                                        src="/pictures/jpg/Screenshot_1.png"
+                                        src="../pictures/jpg/Screenshot_1.png"
                                         alt=""
                                     />
                                 </div>
@@ -398,7 +398,7 @@
                             <li class="basket-item">
                                 <div class="basket-item_img">
                                     <img
-                                        src="/pictures/jpg/Screenshot_1.png"
+                                        src="../pictures/jpg/Screenshot_1.png"
                                         alt=""
                                     />
                                 </div>
@@ -447,7 +447,7 @@
                             <li class="basket-item">
                                 <div class="basket-item_img">
                                     <img
-                                        src="/pictures/jpg/Screenshot_1.png"
+                                        src="../pictures/jpg/Screenshot_1.png"
                                         alt=""
                                     />
                                 </div>
