--- a/components/cart-item.html
+++ b/components/cart-item.html
@@ -227,66 +227,66 @@
                     <picture class="hero__picture">
                         <source
                             media="(max-width: 767px)"
-                            srcset="/pictures/jpg/header-baner-mob.jpg"
+                            srcset="../pictures/jpg/header-baner-mob.jpg"
                         />
 
                         <source
                             media="(min-width: 768px) and (max-width: 1023px)"
-                            srcset="/pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner-tablet.jpg"
                         />
 
                         <source
                             media="(min-width: 1024px)"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                         />
 
                         <img
-                            src="/pictures/jpg/header-baner-tablet.jpg"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            src="../pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                             alt="Брендування стаканів"
                         />
                     </picture>
                     <picture class="hero__picture">
                         <source
                             media="(max-width: 767px)"
-                            srcset="/pictures/jpg/header-baner-mob.jpg"
+                            srcset="../pictures/jpg/header-baner-mob.jpg"
                         />
 
                         <source
                             media="(min-width: 768px) and (max-width: 1023px)"
-                            srcset="/pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner-tablet.jpg"
                         />
 
                         <source
                             media="(min-width: 1024px)"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                         />
 
                         <img
-                            src="/pictures/jpg/header-baner-tablet.jpg"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            src="../pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                             alt="Брендування стаканів"
                         />
                     </picture>
                     <picture class="hero__picture">
                         <source
                             media="(max-width: 767px)"
-                            srcset="/pictures/jpg/header-baner-mob.jpg"
+                            srcset="../pictures/jpg/header-baner-mob.jpg"
                         />
 
                         <source
                             media="(min-width: 768px) and (max-width: 1023px)"
-                            srcset="/pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner-tablet.jpg"
                         />
 
                         <source
                             media="(min-width: 1024px)"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                         />
 
                         <img
-                            src="/pictures/jpg/header-baner-tablet.jpg"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            src="../pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                             alt="Брендування стаканів"
                         />
                     </picture>
@@ -297,27 +297,27 @@
                 <div class="hero__svg">
                     <img
                         class="hero__arrow arrow-left"
-                        src="/pictures/svg/arrow-left.svg"
+                        src="../pictures/svg/arrow-left.svg"
                         alt=""
                     />
                     <img
                         class="hero__coffe full"
-                        src="/pictures/svg/coffe-full.svg"
+                        src="../pictures/svg/coffe-full.svg"
                         alt=""
                     />
                     <img
                         class="hero__coffe empty"
-                        src="/pictures/svg/coffe-empty.svg"
+                        src="../pictures/svg/coffe-empty.svg"
                         alt=""
                     />
                     <img
                         class="hero__coffe empty empty-second"
-                        src="/pictures/svg/coffe-empty.svg"
+                        src="../pictures/svg/coffe-empty.svg"
                         alt=""
                     />
                     <img
                         class="hero__arrow arrow-right"
-                        src="/pictures/svg/arrow-right.svg"
+                        src="../pictures/svg/arrow-right.svg"
                         alt=""
                     />
                 </div>
@@ -365,25 +365,25 @@
                 </div>
                 <picture class="card-item__img">
                     <source
-                        srcset="/pictures/jpg/img_resize.jpg"
+                        srcset="../pictures/jpg/img_resize.jpg"
                         media="(min-width: 1040px)"
                     />
                     <source
-                        srcset="/pictures/png/imgtabl.png"
+                        srcset="../pictures/png/imgtabl.png"
                         media="(min-width: 767px)"
                     />
                     <source
-                        srcset="/pictures/png/img.png"
+                        srcset="../pictures/png/img.png"
                         media="(max-width: 767px)"
                     />
-                    <img src="/pictures/jpg/img_resize.jpg" alt="cartoon" />
+                    <img src="../pictures/jpg/img_resize.jpg" alt="cartoon" />
                 </picture>
 
                 <div class="card-item__vrap-btn">
                     <button class="card-item__btn">
                         <img
                             class="card-item__btn-svg"
-                            src="/pictures/svg/ok.svg"
+                            src="../pictures/svg/ok.svg"
                             alt=""
                             srcset=""
                         />В наявності
@@ -481,7 +481,7 @@
                         et in dignissimos.
                     </p>
                     <button class="description_btn" type="button">
-                        <img src="/pictures/svg/down.svg" alt="" srcset="" />
+                        <img src="../pictures/svg/down.svg" alt="" srcset="" />
                     </button>
                 </div>
             </div>
@@ -531,7 +531,7 @@
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
                         <a href="../components/cart-item.html"><img
-                            src="/pictures/png/Screenshot_1.png"
+                            src="../pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
                         /></a>
@@ -561,7 +561,7 @@
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
                         <a href="../components/cart-item.html"><img
-                            src="/pictures/png/Screenshot_1.png"
+                            src="../pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
                         /></a>
@@ -591,7 +591,7 @@
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
                         <a href="../components/cart-item.html"><img
-                            src="/pictures/png/Screenshot_1.png"
+                            src="../pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
                         /></a>
