--- a/components/category.html
+++ b/components/category.html
@@ -224,66 +224,66 @@
                         <picture class="">
                             <source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/header-baner-mob.jpg"
+                                srcset="../pictures/jpg/header-baner-mob.jpg"
                             />
 
                             <source
                                 media="(min-width: 768px) and (max-width: 1023px)"
-                                srcset="/pictures/jpg/header-baner-tablet.jpg"
+                                srcset="../pictures/jpg/header-baner-tablet.jpg"
                             />
 
                             <source
                                 media="(min-width: 1024px)"
-                                srcset="/pictures/jpg/header-baner.jpg"
+                                srcset="../pictures/jpg/header-baner.jpg"
                             />
 
                             <img
-                                src="/pictures/jpg/header-baner-tablet.jpg"
-                                srcset="/pictures/jpg/header-baner.jpg"
+                                src="../pictures/jpg/header-baner-tablet.jpg"
+                                srcset="../pictures/jpg/header-baner.jpg"
                                 alt="Брендування стаканів"
                             />
                         </picture>
                         <picture class="">
                             <source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/header-baner-mob.jpg"
+                                srcset="../pictures/jpg/header-baner-mob.jpg"
                             />
 
                             <source
                                 media="(min-width: 768px) and (max-width: 1023px)"
-                                srcset="/pictures/jpg/header-baner-tablet.jpg"
+                                srcset="../pictures/jpg/header-baner-tablet.jpg"
                             />
 
                             <source
                                 media="(min-width: 1024px)"
-                                srcset="/pictures/jpg/header-baner.jpg"
+                                srcset="../pictures/jpg/header-baner.jpg"
                             />
 
                             <img
-                                src="/pictures/jpg/header-baner-tablet.jpg"
-                                srcset="/pictures/jpg/header-baner.jpg"
+                                src="../pictures/jpg/header-baner-tablet.jpg"
+                                srcset="../pictures/jpg/header-baner.jpg"
                                 alt="Брендування стаканів"
                             />
                         </picture>
                         <picture class="">
                             <source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/header-baner-mob.jpg"
+                                srcset="../pictures/jpg/header-baner-mob.jpg"
                             />
 
                             <source
                                 media="(min-width: 768px) and (max-width: 1023px)"
-                                srcset="/pictures/jpg/header-baner-tablet.jpg"
+                                srcset="../pictures/jpg/header-baner-tablet.jpg"
                             />
 
                             <source
                                 media="(min-width: 1024px)"
-                                srcset="/pictures/jpg/header-baner.jpg"
+                                srcset="../pictures/jpg/header-baner.jpg"
                             />
 
                             <img
-                                src="/pictures/jpg/header-baner-tablet.jpg"
-                                srcset="/pictures/jpg/header-baner.jpg"
+                                src="../pictures/jpg/header-baner-tablet.jpg"
+                                srcset="../pictures/jpg/header-baner.jpg"
                                 alt="Брендування стаканів"
                             />
                         </picture>
@@ -294,27 +294,27 @@
                     <div class="hero__svg">
                         <img
                             class="hero__arrow arrow-left"
-                            src="/pictures/svg/arrow-left.svg"
+                            src="../pictures/svg/arrow-left.svg"
                             alt=""
                         />
                         <img
                             class="hero__coffe full"
-                            src="/pictures/svg/coffe-full.svg"
+                            src="../pictures/svg/coffe-full.svg"
                             alt=""
                         />
                         <img
                             class="hero__coffe empty"
-                            src="/pictures/svg/coffe-empty.svg"
+                            src="../pictures/svg/coffe-empty.svg"
                             alt=""
                         />
                         <img
                             class="hero__coffe empty empty-second"
-                            src="/pictures/svg/coffe-empty.svg"
+                            src="../pictures/svg/coffe-empty.svg"
                             alt=""
                         />
                         <img
                             class="hero__arrow arrow-right"
-                            src="/pictures/svg/arrow-right.svg"
+                            src="../pictures/svg/arrow-right.svg"
                             alt=""
                         />
                     </div>
@@ -329,13 +329,13 @@
                     >
                     <img
                         class="second-nav__svg"
-                        src="/pictures/svg/arrow-right.svg"
+                        src="../pictures/svg/arrow-right.svg"
                         alt="right-arrow"
                     />
                     <a class="second-nav__link" href="../components/catalog.html">Каталог</a>
                     <img
                         class="second-nav__svg"
-                        src="/pictures/svg/arrow-right.svg"
+                        src="../pictures/svg/arrow-right.svg"
                         alt="right-arrow"
                     />
                     <a class="second-nav__link" href="">Акії</a>
@@ -345,7 +345,7 @@
                         <h2 class="filter__name">Фільтр</h2>
                         <img
                             class="filter__head_svg"
-                            src="/pictures/svg/arrow-right.svg"
+                            src="../pictures/svg/arrow-right.svg"
                             alt=""
                         />
                     </div>
@@ -459,7 +459,7 @@
                         <h2 class="category__name">Категорія</h2>
                         <img
                             class="category__head_svg"
-                            src="/pictures/svg/arrow-right.svg"
+                            src="../pictures/svg/arrow-right.svg"
                             alt=""
                         />
                     </div>
@@ -723,7 +723,7 @@
                         <button class="category__toggle">
                             <img
                                 class="category__toggle--img"
-                                src="/pictures/png/arrow-circle.png"
+                                src="../pictures/png/arrow-circle.png"
                                 alt=""
                             />
                             <span class="category__toggle--name"
@@ -740,7 +740,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -779,7 +779,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -818,7 +818,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -857,7 +857,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -896,7 +896,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -935,7 +935,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -974,7 +974,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1013,7 +1013,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1052,7 +1052,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1091,7 +1091,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1130,7 +1130,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1169,7 +1169,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1208,7 +1208,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1247,7 +1247,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1286,7 +1286,7 @@
                                     Сироп TM Pearl Tea Кокос 700 мл
                                 </h4>
                                 <a href="../components/cart-item.html"><img
-                                    src="/pictures/png/Screenshot_1.png"
+                                    src="../pictures/png/Screenshot_1.png"
                                     alt=""
                                     class="sale__item__img"
                                 /> </a>
@@ -1362,14 +1362,14 @@
                     <div class="container-sale__down">
                         <img
                             class="sale__down"
-                            src="/pictures/svg/down.svg"
+                            src="../pictures/svg/down.svg"
                             alt=""
                         />
                     </div>
                 </div>
                 <div class="sale__razom">
                     <img
-                        src="/pictures/jpg/category-razom-mi-tablet.jpg"
+                        src="../pictures/jpg/category-razom-mi-tablet.jpg"
                         alt=""
                     />
                 </div>
