--- a/components/contacts.html
+++ b/components/contacts.html
@@ -236,7 +236,7 @@
                             <li class="contacts__item">
                                 <img
                                     class="contacts__img"
-                                    src="/pictures/svg/punkt.svg"
+                                    src="../pictures/svg/punkt.svg"
                                     alt=""
                                 />
                                 <p
@@ -249,7 +249,7 @@
                             <li class="contacts__item">
                                 <img
                                     class="contacts__img"
-                                    src="/pictures/svg/phone.svg"
+                                    src="../pictures/svg/phone.svg"
                                     alt=""
                                 />
                                 <div>
@@ -268,7 +268,7 @@
                             <li class="contacts__item">
                                 <img
                                     class="contacts__img"
-                                    src="/pictures/svg/mail-con.svg"
+                                    src="../pictures/svg/mail-con.svg"
                                     alt=""
                                 />
                                 <div>
@@ -319,27 +319,27 @@
                         <a href=""
                             ><img
                                 class="contacts__img"
-                                src="/pictures/svg/facebook-con.svg"
+                                src="../pictures/svg/facebook-con.svg"
                                 alt="" /></a
                         ><a href=""
                             ><img
                                 class="contacts__img"
-                                src="/pictures/svg/instagram-con.svg"
+                                src="../pictures/svg/instagram-con.svg"
                                 alt="" /></a
                         ><a href=""
                             ><img
                                 class="contacts__img"
-                                src="/pictures/svg/youtube-con.svg"
+                                src="../pictures/svg/youtube-con.svg"
                                 alt="" /></a
                         ><a href=""
                             ><img
                                 class="contacts__img"
-                                src="/pictures/svg/phone-call-con.svg"
+                                src="../pictures/svg/phone-call-con.svg"
                                 alt="" /></a
                         ><a href=""
                             ><img
                                 class="contacts__img"
-                                src="/pictures/svg/telegram-con.svg"
+                                src="../pictures/svg/telegram-con.svg"
                                 alt=""
                         /></a>
                     </div>
