--- a/components/contract.html
+++ b/components/contract.html
@@ -329,13 +329,13 @@
                                 </p>
                                 <div class="citation__img">
                                     <img
-                                        src="/pictures/svg/con-inverted-commas.svg"
+                                        src="../pictures/svg/con-inverted-commas.svg"
                                         alt=""
                                     />
                                 </div>
                                 <div class="citation__img">
                                     <img
-                                        src="/pictures/svg/con-inverted-commas.svg"
+                                        src="../pictures/svg/con-inverted-commas.svg"
                                         alt=""
                                     />
                                 </div>
@@ -395,7 +395,7 @@
                                     >
                                     <img
                                         class="check__forma-svg"
-                                        src="/pictures/svg/1.svg"
+                                        src="../pictures/svg/1.svg"
                                     />
                                 </div>
                                 <div class="check__forma-select">
