--- a/components/item-not.html
+++ b/components/item-not.html
@@ -230,7 +230,7 @@
                     <picture class="hero__picture">
                         <source
                             media="(max-width: 767px)"
-                            srcset="/pictures/jpg/header-baner-mob.jpg"
+                            srcset="../pictures/jpg/header-baner-mob.jpg"
                         />
 
                         <source
@@ -242,19 +242,19 @@
 
                         <source
                             media="(min-width: 1024px)"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                         />
 
                         <img
-                            src="/pictures/jpg/header-baner-tablet.jpg"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            src="../pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                             alt="Брендування стаканів"
                         />
                     </picture>
                     <picture class="hero__picture">
                         <source
                             media="(max-width: 767px)"
-                            srcset="/pictures/jpg/header-baner-mob.jpg"
+                            srcset="../pictures/jpg/header-baner-mob.jpg"
                         />
 
                         <source
@@ -266,19 +266,19 @@
 
                         <source
                             media="(min-width: 1024px)"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                         />
 
                         <img
-                            src="/pictures/jpg/header-baner-tablet.jpg"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            src="../pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                             alt="Брендування стаканів"
                         />
                     </picture>
                     <picture class="hero__picture">
                         <source
                             media="(max-width: 767px)"
-                            srcset="/pictures/jpg/header-baner-mob.jpg"
+                            srcset="../pictures/jpg/header-baner-mob.jpg"
                         />
 
                         <source
@@ -290,12 +290,12 @@
 
                         <source
                             media="(min-width: 1024px)"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                         />
 
                         <img
-                            src="/pictures/jpg/header-baner-tablet.jpg"
-                            srcset="/pictures/jpg/header-baner.jpg"
+                            src="../pictures/jpg/header-baner-tablet.jpg"
+                            srcset="../pictures/jpg/header-baner.jpg"
                             alt="Брендування стаканів"
                         />
                     </picture>
@@ -308,27 +308,27 @@
                 <div class="hero__svg">
                     <img
                         class="hero__arrow arrow-left"
-                        src="/pictures/svg/arrow-left.svg"
+                        src="../pictures/svg/arrow-left.svg"
                         alt=""
                     />
                     <img
                         class="hero__coffe full"
-                        src="/pictures/svg/coffe-full.svg"
+                        src="../pictures/svg/coffe-full.svg"
                         alt=""
                     />
                     <img
                         class="hero__coffe empty"
-                        src="/pictures/svg/coffe-empty.svg"
+                        src="../pictures/svg/coffe-empty.svg"
                         alt=""
                     />
                     <img
                         class="hero__coffe empty empty-second"
-                        src="/pictures/svg/coffe-empty.svg"
+                        src="../pictures/svg/coffe-empty.svg"
                         alt=""
                     />
                     <img
                         class="hero__arrow arrow-right"
-                        src="/pictures/svg/arrow-right.svg"
+                        src="../pictures/svg/arrow-right.svg"
                         alt=""
                     />
                 </div>
@@ -358,7 +358,7 @@
                     </p>
                     <img
                         class="notin-item-stars"
-                        src="/pictures/svg/star.svg"
+                        src="../pictures/svg/star.svg"
                         alt=""
                         sizes=""
                         srcset=""
@@ -366,25 +366,25 @@
                 </div>
                 <picture class="card-item__img">
                     <source
-                        srcset="/pictures/jpg/img_resize.jpg"
+                        srcset="../pictures/jpg/img_resize.jpg"
                         media="(min-width: 1040px)"
                     />
                     <source
-                        srcset="/pictures/png/imgtabl.png"
+                        srcset="../pictures/png/imgtabl.png"
                         media="(min-width: 767px)"
                     />
                     <source
-                        srcset="/pictures/png/img.png"
+                        srcset="../pictures/png/img.png"
                         media="(max-width: 767px)"
                     />
-                    <img src="/pictures/jpg/img_resize.jpg" alt="cartoon" />
+                    <img src="../pictures/jpg/img_resize.jpg" alt="cartoon" />
                 </picture>
 
                 <div class="notin-item__vrap-btn">
                     <button class="notin-item__btn">
                         <img
                             class="notin-item__btn-svg notin-item__btn-svg__first-child"
-                            src="/pictures/svg/not.svg"
+                            src="../pictures/svg/not.svg"
                             alt=""
                             srcset=""
                         />Немає в наявності
@@ -463,7 +463,7 @@
                         et in dignissimos.
                     </p>
                     <button class="description_btn" type="button">
-                        <img src="/pictures/svg/down.svg" alt="" srcset="" />
+                        <img src="../pictures/svg/down.svg" alt="" srcset="" />
                     </button>
                 </div>
             </div>
@@ -497,7 +497,7 @@
                     <li class="responsepeople-item">
                         <img
                             class="responsepeople-img"
-                            src="/pictures/svg/people.svg"
+                            src="../pictures/svg/people.svg"
                             alt=""
                         />
                         <div class="responsepeople-wrap">
@@ -507,7 +507,7 @@
                                 </p>
                                 <img
                                     class="responsepeople-stars"
-                                    src="/pictures/svg/star.svg"
+                                    src="../pictures/svg/star.svg"
                                     alt=""
                                     sizes=""
                                     srcset=""
@@ -527,7 +527,7 @@
                     <li class="responsepeople-item">
                         <img
                             class="responsepeople-img"
-                            src="/pictures/svg/people.svg"
+                            src="../pictures/svg/people.svg"
                             alt=""
                         />
                         <div class="responsepeople-wrap">
@@ -537,7 +537,7 @@
                                 </p>
                                 <img
                                     class="responsepeople-stars"
-                                    src="/pictures/svg/star.svg"
+                                    src="../pictures/svg/star.svg"
                                     alt=""
                                     sizes=""
                                     srcset=""
@@ -557,7 +557,7 @@
                     <li class="responsepeople-item">
                         <img
                             class="responsepeople-img"
-                            src="/pictures/svg/people.svg"
+                            src="../pictures/svg/people.svg"
                             alt=""
                         />
                         <div class="responsepeople-wrap">
@@ -567,7 +567,7 @@
                                 </p>
                                 <img
                                     class="responsepeople-stars"
-                                    src="/pictures/svg/star.svg"
+                                    src="../pictures/svg/star.svg"
                                     alt=""
                                     sizes=""
                                     srcset=""
@@ -596,7 +596,7 @@
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
                         <img
-                            src="/pictures/png/Screenshot_1.png"
+                            src="../pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
                         />
@@ -626,7 +626,7 @@
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
                         <img
-                            src="/pictures/png/Screenshot_1.png"
+                            src="../pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
                         />
@@ -656,7 +656,7 @@
                             Сироп TM Pearl Tea Кокос 700 мл
                         </h4>
                         <img
-                            src="/pictures/png/Screenshot_1.png"
+                            src="../pictures/png/Screenshot_1.png"
                             alt=""
                             class="sale__item__img"
                         />
