--- a/components/moda-cart.html
+++ b/components/moda-cart.html
@@ -56,25 +56,25 @@
                 </div>
                 <picture class="card-item__img">
                     <source
-                        srcset="/pictures/jpg/img_resize.jpg"
+                        srcset="../pictures/jpg/img_resize.jpg"
                         media="(min-width: 1040px)"
                     />
                     <source
-                        srcset="/pictures/png/imgtabl.png"
+                        srcset="../pictures/png/imgtabl.png"
                         media="(min-width: 767px)"
                     />
                     <source
-                        srcset="/pictures/png/img.png"
+                        srcset="../pictures/png/img.png"
                         media="(max-width: 767px)"
                     />
-                    <img src="/pictures/jpg/img_resize.jpg" alt="cartoon" />
+                    <img src="../pictures/jpg/img_resize.jpg" alt="cartoon" />
                 </picture>
 
                 <div class="card-item__vrap-btn">
                     <button class="card-item__btn">
                         <img
                             class="card-item__btn-svg"
-                            src="/pictures/svg/ok.svg"
+                            src="../pictures/svg/ok.svg"
                             alt=""
                             srcset=""
                         />В наявності
