--- a/components/chek-list.htm
+++ b/components/chek-list.htm
@@ -332,7 +332,7 @@
                             >
                             <img
                                 class="check__forma-svg"
-                                src="/pictures/svg/1.svg"
+                                src="../pictures/svg/1.svg"
                             />
                         </div>
                         <div class="check__forma-select">
@@ -351,7 +351,7 @@
                             >
                             <img
                                 class="check__forma-svg"
-                                src="/pictures/svg/1.svg"
+                                src="../pictures/svg/1.svg"
                             />
                         </div>
                         <div class="check__forma-select">
@@ -380,7 +380,7 @@
                             >
                             <img
                                 class="check__forma-svg"
-                                src="/pictures/svg/1.svg"
+                                src="../pictures/svg/1.svg"
                             />
                         </div>
                         <div class="check__forma-select">
@@ -399,7 +399,7 @@
                             >
                             <img
                                 class="check__forma-svg"
-                                src="/pictures/svg/1.svg"
+                                src="../pictures/svg/1.svg"
                             />
                         </div>
                         <div class="check__forma-select">
@@ -419,7 +419,7 @@
                             >
                             <img
                                 class="check__forma-svg"
-                                src="/pictures/svg/1.svg"
+                                src="../pictures/svg/1.svg"
                             />
                         </div>
                         <div class="check__forma-select">
