--- a/css/footer.css
+++ b/css/footer.css
@@ -156,7 +156,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-image: url("/pictures/jpg/header-down-mob.jpg");
+        background-image: url("../pictures/jpg/header-down-mob.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 50px;
@@ -315,7 +315,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-image: url("/pictures/jpg/header-down-mob.jpg");
+        background-image: url("../pictures/jpg/header-down-mob.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 100px;
@@ -478,7 +478,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-image: url("/pictures/jpg/header-down-2x.jpg");
+        background-image: url("../pictures/jpg/header-down-2x.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         padding: 100px;
