--- a/css/header.css
+++ b/css/header.css
@@ -59,7 +59,7 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        background-image: url("/pictures/jpg/header-up-mob.jpg");
+        background-image: url("../pictures/jpg/header-up-mob.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 10px;
@@ -272,7 +272,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-image: url("/pictures/jpg/header-up-mob.jpg");
+        background-image: url("../pictures/jpg/header-up-mob.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 23px;
@@ -468,7 +468,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        background-image: url("/pictures/jpg/header-up.jpg");
+        background-image: url("../pictures/jpg/header-up.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 33px;
